@@ -45,3 +45,6 @@ dev.1.0.12.20240529
 
 dev.1.0.13.20240530
 1. Trans string to char in getInputType function 
+
+dev.1.0.14.20240531
+1. Fix bug of make_index_expression for gen tensor.index infer op  
